@@ -44,8 +44,6 @@ ECL 0.9h
    true bignums then, just long long int if possible; doesn't work with native
    compilation because compiler needs true bignums).
 
-* System design:
-
  - ECL's own conservative garbage collector works again.
 
  - It is possible now to execute lisp code from threads that have been created
@@ -53,7 +51,16 @@ ECL 0.9h
 	ecl_import_current_thread(cl_object name, cl_object bindings)
    should be called to register the current thread with the lisp world, while
 	ecl_release_current_thread()
-   should be invoked before the current thread exits.
+   should be invoked before the current thread exits. However, in order to
+   ensure that the garbage collector can handle these threads, these
+   applications must be compiled and linked against ECL so that the
+   appropiate replacements for pthread_create()/CreateThread() are used.
+
+ - On systems with GNU libc, we are able to signal and trap floating point
+   exceptions of the following kinds: overflow, underflow and division by zero.
+   Trapping of these exceptions can be disabled with (SI::TRAP-FPE NIL). In
+   practice this means overflows in routines like EXP, EXPT, etc, are now
+   detected.
 
 * Visible changes:
 
